--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
     <h2 class="site-title">
         <a class="site-titlelink" href="{{ site.baseurl }}/">Justin Yang</a>
     </h2>
-    <h2>justin.saxton.yang@gmail.com</h2>
+    <h2>jyang772 at gmail dot com</h2>
     </div>
     <div>
     <ul>
