--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
         </li>
         {% endfor %}
     </ul>
-      <form onsubmit="window.location.href='http://www.google.com/#q=site:jyang772.github.io+'+document.getElementById('searchbar').value;return false;">
+      <form onsubmit="window.location.href='http://www.google.com/search?q=site:jyang772.github.io+'+document.getElementById('searchbar').value;return false;">
         <input type='text' id='searchbar' placeHolder='Search ...'/>
         <input type='submit' style='display:none;'/>
       </form>
